2019-07-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decepoint.cpp (addpoint): bug fixed
	problem in ENDFLibCopy called after del/add-point

2019-05-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/matrix.cpp (MatrixInverse1): modified
	gcc8 hack

	* source/decescanindex.cpp (DeceScanIndex): modified
	* source/dece.cpp (DeceStoreData): bug fixed
	change in decescanindex created a side effect of deceoutput
	older file recovered

2019-05-14  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp (DeceStoreData): modified
	MF32, 34, and 35 activated

	* source/endflib.cpp (ENDFMF2boundary): modified
	bug reported by HIK
	set emaxRe zero when only URR is given but LSSF flag is 1

	* source/deceread.cpp (geneCSdata): update
	function split into two cases

	* source/decescanindex.cpp (DeceScanIndex): bug fixed
	MT number can be more than 100 in a special case

	* source/dece.cpp (WarningMessage): modified
	* source/dece.cpp (Notice): modified
	made message global, and unify all WarningMessage methods
	

2019-04-07  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.h: modified
	use the same sqrt{2m}/h-bar as ENDF-6

	* source/gfr.cpp (gfrScanThermal): modified
	accept incident energy by option -e

2019-03-19  Toshihiko Kawano  <kawano@lanl.gov>

	* LICENSE: updated
	changed from Los Alamos to Triad

2019-03-18  Toshihiko Kawano  <kawano@lanl.gov>

	* README (DeCE): updated

	* source/decetable35.cpp: new file
	read and tabulate MF35 spectrum covariance

	* test/input/input14.dece: new file
	* test/input/input15.dece: new file
	* test/input/input16.dece: new file
	three more tests added

2019-03-16  KAWANO Toshihiko  <kawano@lanl.gov>

	* manual/option.html: new file
	* manual/index.html: updated
	manual updated

	* source/endflib.h: updated
	ENDF class and ENDFDict class updated
	NX, NI variables removed since redundant
	Some member variables in ENDFDict moved to private

2019-03-13  KAWANO Toshihiko  <kawano@lanl.gov>

	* test/decetest.sh: new file