@@ -9,7 +9,7 @@
 class GlobalOption{
  public:
   bool   LineNumber            ;    // print line numbers
-  int    AngleStep             ;    // calculate angular distribution at this step
+  double AngleStep             ;    // calculate angular distribution at this step
   double ReadXdataConversion   ;    // conversion factor of energy when importing data
   double ReadYdataConversion   ;    // conversion factor of cross section
   double WriteXdataConversion  ;    // conversion factor when tabulating energy
@@ -17,7 +17,7 @@ class GlobalOption{
 
   GlobalOption(){
     LineNumber           =  false;
-    AngleStep            =  0;      // when zero, Legendre coefficients are printed
+    AngleStep            =  0.0;    // when zero, Legendre coefficients are printed
     ReadXdataConversion  =  1.0e+6; // default in MeV
     ReadYdataConversion  =  0.001;  // default in milli-barn
     WriteXdataConversion =  1.0;    // default in eV
